# ui_password_generator

./: LICENSE  README.md  pyproject.toml
password_generator/: app.py  password_generator.py
password_generator/ui/: main.ui  resources.py  resources.qrc  ui_main.py
password_generator/ui/css/: style.css
