[tool.poetry]
name = "password-generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "password_generator"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pyside6 = "^6.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
